add input for the fullname

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <label for="fullname"></label>
+    <input type="text">
+    <button>Genera</button>
+    <p id="fullname"></p>
     <script src="js/script.js" ></script>
 </body>
 </html>
