add coach random number

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <input type="text">
     <button>Genera</button>
     <p id="fullname"></p>
+    <p id="carrozza"></p>
     <script src="js/script.js" ></script>
 </body>
 </html>
