add cp code random number

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button>Genera</button>
     <p id="fullname"></p>
     <p id="carrozza"></p>
+    <p id="cpcode"></p>
     <script src="js/script.js" ></script>
 </body>
 </html>
